--- a/mfg.tex
+++ b/mfg.tex
@@ -1,11 +1,36 @@
 \subsection{PCB House}
-\todo{1 page}
-
-\subsubsection{OSH Park}
+After carefully designing our schematics, we first need to decide on a PCB
+manufacturer to use for our printed circuit boards. There are a few popular and
+affordable options available for hobbyists and small run jobs. We weigh the
+options available in the following sections.
 
 \subsubsection{Seeed Studio}
+This PCB house offers many services including a low cost PCB service. The
+pricing model is based off of the number of layers, thickness, and size class.
+The size class of 10cm x 10cm would have a base cost of around \$21.00. This is
+quite fair and would meet our needs for manufacturing.  Seeed Studio is based
+in China, which is something to take in to considering if we are ordering
+boards and need them quickly. Also, even ordering initial boards would have a
+long enough turn around time that we wouldn't be able to test and construct our
+design iteratively. Seeed's cost is very competitive, but we would be losing
+time to save cost.
 
-\subsubsection{4PCB}
+%\subsubsection{4PCB}
+
+\subsubsection{OSH Park}
+OSH park is quite a popular option due to their low price point for small
+boards. They are known by their distinctive purple boards. WHCS has decided to
+choose OSH Park due to the fair price for a 2 layer board run. A single
+run would yield 3 copies for \$5 a square inch. Unfortunately, this pricing
+model will make any significantly large boards too expensive. For the control
+modules, it is possible to create a very small design that still meets the WHCS
+requirements.  WHCS has no special PCB requirements beyond being able to create
+surface mount pads for the control module and base station boards.  The base
+station PCB will be limited by the size of the LCD, but this is only around 2
+by 3 inches.
+
+Overall, OSH park is the best choice for WHCS' budget and technical
+requirements. Its fast shipping time will ensure that we have plenty of time to test our board and make any additional runs if the worst happens.
 
 \subsection{Parts}
 This section will discuss how parts come into the play of the manufacturing of
