W: Base Station Schematic, Timer UML

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,15 +1,20 @@
-% Section 12 in file appendix.tex
-\tbw
+\section{Appendix - Complete Schematics}
+\includepdf[angle=90]{base-station}
+\label{apx:base-station-sch}
 
-% Section 12.1
-\subsection{Appendix A - Figures}
+\section{Appendix - Copyright Notices}
+\emph{During the creation of this document, we avoided using any copyrighted works.}
 
-% Section 12.2
-\subsection{Appendix B - Tables}
+% BEGIN BIBLIOGRAPHY
+%\newpage
+%\clearpage
+\thispagestyle{empty}
+\pagestyle{empty}
 
-% Section 12.3
-\subsection{Appendix C - Complete Schematics}
+\section{Appendix - References}
 
-% Section 12.4
-\subsection{Appendix D - Copyright Notices}
-
+% Actual References
+\todo[inline]{Must have an ``old style'' reference section}
+\renewcommand{\refname}{\centerline{\Large\bf References Cited}}
+\bibliographystyle{simple}
+\bibliography{./ref}
