--- a/whcs.tex
+++ b/whcs.tex
@@ -49,6 +49,8 @@
 \usepackage{listings}
 % Keep floats in check with [H]
 \usepackage{float}
+% For including raw PDFs
+\usepackage{pdfpages}
 % Fancy if statements
 \usepackage{ifthen}
 \usepackage{array}
