W: long tail, paragraphs no numbering

--- a/demo.tex
+++ b/demo.tex
@@ -30,7 +30,15 @@ display being turned off. The point of this demo is to show the ease of use and
 the power of the voice control in the Android application.
 
 \subsection{LCD Light Activation}
-\todo{1 page}
+In order to demonstrate how the base station LCD works separately from the
+Android phone, we will show that all of the WHCS functions can be controlled
+from the touch panel. The simplest test would be to press a button on the LCD
+and have a controlled light toggle off and on. This would demonstrate that WHCS
+is functional on many levels: the LCD works and can receive input, the base
+station can send packets to a specific control module, and that specific
+control module can correctly execute a received command.  Members present
+during the demo would be able to see for themselves how the LCD operates. They
+could explore the menus and try to control some modules themselves.
 
 \subsection{Sensor Query}
 Sensors are a passive part of WHCS that enhance the overall appeal of the
@@ -51,7 +59,17 @@ to sensor data. For our purposes the sensors will only serve as information
 providers for users.
 
 \subsection{Fault Recovery (Loss of Power)}
-\todo{1 page}
+A demo that would have a lot of impact would be to pull the power on WHCS. To
+prove that the backup battery failover systems work, physically yanking the
+power cord from the wall would show that the system is able to quickly recover
+from an unexpected power outage. Technically this would be like watching a
+uninterruptible power supply activate, but on a smaller scale and with hardware
+that is visible and easier to understand. Also, the battery indicator on the
+LCD could reflect the detected power event and spread that event to all
+listening control modules and connected phones. That way the user could be
+remotely notified in the event of a power outage. Of course due to the limited
+range of the BlueTooth connection the owner would most likely know when the
+power goes out as they are probably in the home.
 
 \subsection{Remote Door Access}
 \label{sec:demo-door}
