Fixed messed up xref

--- a/hwsw.tex
+++ b/hwsw.tex
@@ -896,7 +896,7 @@ An LCD is nothing without a good library driving it. Even if all possible
 shapes and text can be drawn, without a good user interface library, the system
 is a painting. WHCS aims to have an LCD users \emph{want} to interact with.
 This will be accomplished with a feature rich UI library that enables text,
-buttons, lists, and images to be drawn and organized simply. A sample WHCS home screen is mocked up and shows the required controls in \autoref{fig:ui-mockuo-home}. 
+buttons, lists, and images to be drawn and organized simply. A sample WHCS home screen is mocked up and shows the required controls in \autoref{fig:ui-mockup-home}. 
 In normal UI libraries, such as the Android View hierarchy, UI elements can be added on the
 fly. Unfortunately, unless the UI elements for WHCS are extremely low memory,
 storing dynamic UI elements may prove to be too costly for the microcontroller.
