--- a/appendix.tex
+++ b/appendix.tex
@@ -1,6 +1,10 @@
 \section{Appendix - Complete Schematics}
 \includepdf[angle=90]{base-station}
 \label{apx:base-station-sch}
+\includepdf[angle=90]{power-board}
+\label{apx:power-board-sch}
+\includepdf[angle=90]{control-module}
+\label{apx:control-module-sch}
 
 \section{Appendix - Copyright Notices}
 \emph{During the creation of this document, we avoided using any copyrighted works.}
